testcases/invalid/semanticErr/variables/invalidName.wacc
# redeclaration of variable

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int 9x = 10
end
